--- a/public/asset-tambahan/style.css
+++ b/public/asset-tambahan/style.css
@@ -48,7 +48,7 @@
 }
 
 .nav-treeview .nav-item a {
-    background-color: blue;
+    background-color: rgb(0, 124, 155);
 }
 /* cut sidebar kiri style */
 
