--- a/public/asset-tambahan/style-user-managemant.css
+++ b/public/asset-tambahan/style-user-managemant.css
@@ -1,8 +1,8 @@
 .card-body .navbar .container-fluid .collapse ul li a {
     color: blue;
 } 
-.card-body .navbar .container-fluid .collapse ul li a:hover {
+.card-body .navbar .container-fluid .navbar-menu ul li a:hover {
     color: green;
-    transform: rotate(4deg);
+    transform: rotate(2deg);
     transition: 0.4s;
 } 
