menambahkan fitur  cek level pada saat login

--- a/public/asset-tambahan/login-style.css
+++ b/public/asset-tambahan/login-style.css
@@ -14,7 +14,7 @@
     padding: 1vh;
     width: 80%;
     border-radius: 5px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Times New Roman', Times, serif;
     font-size: 25px;
 }
 
