--- a/public/asset-tambahan/style.css
+++ b/public/asset-tambahan/style.css
@@ -83,5 +83,49 @@
     color: blue;
 }
 
+/* konten master data  */
+.master-data-menu .container-fluid  {
+    background-color:whitesmoke;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content:flex-start;
+    gap: 17px;
+    align-items: center;
+}
+.master-data-menu .container-fluid a  {
+    color: blue;
+    font-size: 15px;
+}
+
+.master-data-menu .container-fluid a:hover  {
+    font-size: 16px;
+    transition: font-size 0.6s;
+    background-color: #927dc4;
+    border-radius: 7px;
+    padding: 5px;
+}
+
+.img-dashboard img {
+    width: 80%;
+}
+.detail-dashboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url('../img/dashboard1.jpeg');
+    border-radius: 10px;
+    margin: 10px;
+ 
+    
+}
+
+.detail-dashboard h5 {
+    color: white;
+}
+ 
+
 
 /* end footer style */
