--- a/public/asset-tambahan/style.css
+++ b/public/asset-tambahan/style.css
@@ -147,4 +147,16 @@
         margin: 15px;
     }
 
+
+
 /* style karyawan end */
+
+/* style form absensi */
+.form-create-absensi-karyawan {
+    padding: 35px;
+}
+
+/* konten cek jadwal  */
+.konten-cek-jadwal {
+    font-size: 12px;
+}
