--- a/public/asset-tambahan/style.css
+++ b/public/asset-tambahan/style.css
@@ -36,19 +36,21 @@
 }
 
 .nav-treeview {
-    margin-top: 25px;
+    margin-top: 15px;
 }
 .side a {
     color: black;
 }
 
 .master-data-side {
-    padding: 10px;
+    padding: 7px;
     margin: 10px;
 }
 
 .nav-treeview .nav-item a {
     background-color: rgb(0, 124, 155);
+    font-size: 14px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 /* cut sidebar kiri style */
 
